--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   ],
   "scripts": {
     "build": "nwb build-react-component",
+    "ghpages": "gh-pages -d build",
+    "postbuild": "npm run ghpages",
     "clean": "nwb clean-module && nwb clean-demo",
     "prepublishOnly": "npm run build",
     "start": "nwb serve-react-demo",
@@ -44,6 +46,7 @@
     "docdash": "^1.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
+    "gh-pages": "^2.2.0",
     "inferno": "^5.6.1",
     "jest": "^24.9.0",
     "jest-fetch-mock": "^2.1.2",
