--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@reduxjs/toolkit": "^1.1.0",
+    "i18n": "^0.8.5",
+    "i18next": "^19.1.0",
     "paypal-checkout": "^4.0.305",
     "query-string": "^5.1.1",
     "react-app-polyfill": "^1.0.5",
+    "react-i18next": "^11.3.1",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
