--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
     "@reduxjs/toolkit": "^1.1.0",
+    "i18n": "^0.8.5",
+    "i18next": "^19.1.0",
     "chromedriver": "^79.0.0",
     "paypal-checkout": "^4.0.305",
     "query-string": "^5.1.1",
