--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "jest src",
     "test_dev": "jest --watch src",
     "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
-    "uitest": "jest -c src/functional-test/config/jest.config.js"
+    "functional-test": "jest -c src/functional-test/config/jest.config.js"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
