--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start": "nwb serve-react-demo",
     "test": "jest src",
     "test_dev": "jest --watch src",
-    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
+    "docs": "./node_modules/.bin/jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
