fix Prototype pollution in minimist by using latest version of it

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.0",
     "babel-jest": "^24.9.0",
+    "browserstack-local": "^1.4.5",
     "docdash": "^1.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
@@ -61,11 +62,11 @@
     "jest": "^24.9.0",
     "jest-fetch-mock": "^2.1.2",
     "jsdoc": "^3.6.3",
+    "minimist": "^1.2.5",
     "nwb": "0.23.x",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "redux-devtools-extension": "^2.13.8",
-    "browserstack-local": "^1.4.5",
     "serialize-javascript": ">=2.1.1"
   },
   "author": "",
