--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "webdriver-manager": "^12.1.7"
   },
   "peerDependencies": {
-    "react": "16.x"
+    "react": "16.x",
+    "minimist": "^1.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -53,17 +54,18 @@
     "@babel/preset-es2015": "^7.0.0-beta.53",
     "@babel/preset-react": "^7.7.0",
     "babel-jest": "^24.9.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "browserstack-local": "^1.4.5",
     "docdash": "^1.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "gh-pages": "^2.2.0",
-    "inferno": "^5.6.1",
+    "inferno": "^7.4.2",
     "jest": "^24.9.0",
     "jest-fetch-mock": "^2.1.2",
     "jsdoc": "^3.6.3",
-    "minimist": "^1.2.5",
-    "nwb": "0.23.x",
+    "nwb": "^0.24.5",
+    "optimist": "^0.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "redux-devtools-extension": "^2.13.8",
