--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "gh-pages": "^2.2.0",
+    "http-server": "^0.12.3",
     "inferno": "^7.4.2",
     "jest": "^26.0.1",
     "jest-fetch-mock": "^3.0.3",
