--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "test_dev": "jest --watch src",
     "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
     "serve": "http-server -p 3000 demo/dist",
-    "functional-test-local-chrome": "cross-env LOCALENV=chrome concurrently --kill-others \"npm run serve\" \"node src/functional-test/index.js \"",
-    "functional-test-local-firefox": "cross-env LOCALENV=firefox concurrently --kill-others \"npm run serve\" \"node src/functional-test/index.js \"",
-    "functional-test-local-safari": "cross-env LOCALENV=safari concurrently --kill-others \"npm run serve\" \"node src/functional-test/index.js \""
+    "functional-test-local-chrome": "cross-env LOCALENV=chrome concurrently --kill-others --success first \"npm start\" \"node src/functional-test/index.js \"",
+    "functional-test-local-firefox": "cross-env LOCALENV=firefox concurrently --kill-others --success first \"npm start\" \"node src/functional-test/index.js \"",
+    "functional-test-local-safari": "cross-env LOCALENV=safari concurrently --kill-others --success first  \"npm start\" \"node src/functional-test/index.js \""
   },
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
