--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
     "nwb": "^0.24.5",
     "optimist": "^0.6.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "serialize-javascript": ">=2.1.1"
+    "react-dom": "^16.12.0"
   },
   "author": "",
   "homepage": "",
