PCX-1020 updates the package json to maintain consistency

--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "test_dev": "jest --watch src",
     "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
     "serve": "http-server -p 3000 demo/dist",
-    "prefunctional-test-local-build-chrome": "npm run onlybuild",
-    "functional-test-local-build-chrome": "npm run functional-test-local-chrome",
+    "functional-test-local-build-chrome": "npm run onlybuild && npm run functional-test-local-chrome",
     "functional-test-local-build-firefox": "npm run onlybuild & npm run functional-test-local-firefox",
     "functional-test-local-build-safari": "npm run onlybuild & npm run functional-test-local-safari",
     "functional-test-local-chrome": "cross-env LOCALENV=chrome concurrently --kill-others --success first \"npm run serve\" \"node src/functional-test/index.js \"",
