--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -1,3 +1,4 @@
+
 name: Pull Request
 on:
   pull_request:
@@ -5,7 +6,8 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+
+    runs-on: nodejs
 
     steps:
       - uses: actions/checkout@v2
@@ -17,3 +19,10 @@ jobs:
         run: |
           env
           .ci/test.sh
+
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_FOOTER: "Payoneer's Github Actions"
+        if: failure()
