PCX-1828 adds test environment

--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "jest": {
         "setupFilesAfterEnv": [
             "<rootDir>src/testSetup.js"
-        ]
+        ],
+        "testEnvironment": "jsdom"
     },
     "repository": "",
     "keywords": [
