--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     },
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
+        "@paypal/react-paypal-js": "^7.4.2",
         "@reduxjs/toolkit": "^1.6.1",
         "concurrently": "^6.2.0",
         "cross-env": "^7.0.3",
@@ -40,6 +41,7 @@
         "paypal-checkout": "^4.0.311",
         "query-string": "^7.0.1",
         "react-i18next": "^11.11.4",
+        "react-paypal-button-v2": "^2.6.3",
         "react-redux": "^7.2.4",
         "redux": "^4.1.0",
         "redux-devtools-extension": "^2.13.9",
