--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
-    "name": "express-checkout",
+    "name": "@payoneer/express-checkout",
     "version": "1.12.0-beta",
     "description": "express-checkout React component",
+    "homepage": "",
+    "private": false,
+    "publicComponent": true,
+    "license": "SEE LICENSE IN LICENSE",
+    "author": "",
+    "contributors": [
+        "Joseph El-Alam <josephel@payoneer.com>",
+        "Dixy Xavier <dixyxa@payoneer.com>",
+        "Shahroz Saleem <shahrozsa@payoneer.com>",
+        "Anwer AR <anweran@payoneer.com>",
+        "Stephen Ng'ang'a <stephennd@payoneer.com>"
+    ],
     "main": "lib/index.js",
     "module": "es/index.js",
     "files": [
@@ -10,6 +22,14 @@
         "lib",
         "umd"
     ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/optile/express-checkout.git"
+    },
+    "distributionConfig": {
+        "registry": "https://registry.npmjs.org/",
+        "access": "public"
+    },
     "scripts": {
         "onlybuild": "nwb build-react-component --copy-files && node build",
         "build": "npm run onlybuild",
@@ -78,17 +98,13 @@
         "react": "^16.14.0",
         "react-dom": "^16.14.0"
     },
-    "author": "",
-    "homepage": "",
     "jest": {
         "setupFilesAfterEnv": [
             "<rootDir>src/testSetup.js"
         ],
         "testEnvironment": "jsdom"
     },
-    "repository": "",
     "keywords": [
         "react-component"
-    ],
-    "publicComponent": true
+    ]
 }
