PCx-4322: move configs to Pi-nightly

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -16,6 +16,8 @@ jobs:
         env:
           CI: true
           BRANCH_STRATEGY: release
+          MERCHANT_NAME: ${{ secrets.MERCHANT_NAME }}
+          MERCHANT_TOKEN: ${{ secrets.MERCHANT_TOKEN }}
         run: |
           env
           .ci/test.sh
