PCX-4413: replace gocd test.sh with the commands needed

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -29,7 +29,8 @@ jobs:
           MERCHANT_TOKEN: ${{ secrets.MERCHANT_TOKEN }}
         run: |
           env
-          .ci/test.sh
+          npm ci
+          npm test
 
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
