--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -14,7 +14,8 @@ jobs:
     - name: Use Node.js 14
       uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 14.19.3
+        cache: 'npm'
     - name: Run Test Script
       env:
         CI: true
