--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -11,11 +11,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js 14
-      uses: actions/setup-node@v3
+
+    - uses: actions/setup-node@v3
       with:
-        node-version: 14.19.3
+        node-version: 14
         cache: 'npm'
+        
     - name: Run Test Script
       env:
         CI: true
@@ -27,9 +28,9 @@ jobs:
         npm ci
         npm test
 
-      - name: Slack Notification
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_FOOTER: "Payoneer's Github Actions"
-        if: failure()
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2
+      env:
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+        SLACK_FOOTER: "Payoneer's Github Actions"
+      if: failure()
