--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "@reduxjs/toolkit": "^1.6.1",
         "concurrently": "^6.2.0",
         "cross-env": "^7.0.3",
+        "dotenv": "^10.0.0",
         "i18n": "^0.13.3",
         "i18next": "^20.3.5",
         "lodash": "^4.17.21",
@@ -66,7 +67,7 @@
         "babel-plugin-syntax-dynamic-import": "^6.18.0",
         "browserstack-local": "^1.4.8",
         "docdash": "^1.2.0",
-        "dotenv-webpack": "^8.0.1",
+        "dotenv-webpack": "^7.1.1",
         "enzyme": "^3.11.0",
         "enzyme-adapter-react-16": "^1.15.6",
         "gh-pages": "^3.2.3",
