--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
         "redux": "^4.2.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
-        "selenium-webdriver": "^4.9.2",
+        "selenium-webdriver": "~4.1.2",
         "shelljs": "^0.8.5",
         "webdriver-manager": "^12.1.9"
     },
