--- a/package.json
+++ b/package.json
@@ -32,18 +32,21 @@
         "access": "public"
     },
     "scripts": {
-        "onlybuild": "nwb build-react-component --copy-files && node build",
-        "build": "npm run onlybuild",
+        "build": "npm run build-es5 && npm run build-es && npm run build-umd && npm run build-demo && node ./build-scripts/build",
+        "build-es5": "babel --config-file ./build-scripts/babel.es5.config.js --out-dir ./lib ./src",
+        "build-es": "babel --config-file ./build-scripts/babel.es.config.js --out-dir ./es ./src",
+        "build-umd": "webpack --config ./build-scripts/webpack.umd.config.js && webpack --config ./build-scripts/webpack.umd.minify.config.js",
+        "build-demo": "webpack --config ./build-scripts/webpack.demo.config.js",
         "ghpages": "gh-pages -d demo/dist",
         "postbuild": "npm run ghpages",
-        "clean": "nwb clean-module && nwb clean-demo",
+        "clean": "node ./build-scripts/clean",
         "prepublishOnly": "npm run build",
-        "start": "nwb serve-react-demo",
+        "start": "webpack --config ./build-scripts/webpack.start.demo.config.js && webpack-dev-server --config ./build-scripts/webpack.start.demo.config.js",
         "test": "jest src",
         "test_dev": "jest --watch src",
         "docs": "./node_modules/.bin/jsdoc -c jsdoc.json",
         "serve": "http-server -p 3000 demo/dist",
-        "functional-test": "npm run onlybuild && npm run functional-test-browserstack",
+        "functional-test": "npm run build && npm run functional-test-browserstack",
         "functional-test-browserstack": "cross-env concurrently --kill-others --success first \"npm run serve\" \"BrowserStackLocal --key $BROWSERSTACK_KEY\" \"node src/functional-test/index.js\"",
         "functional-test-local-build-chrome": "npm run onlybuild && npm run functional-test-local-chrome",
         "functional-test-local-build-firefox": "npm run onlybuild && npm run functional-test-local-firefox",
@@ -65,7 +68,7 @@
         "redux": "^4.2.1",
         "redux-devtools-extension": "^2.13.9",
         "redux-thunk": "^2.3.0",
-        "selenium-webdriver": "^4.9.2",
+        "selenium-webdriver": "~4.1.2",
         "shelljs": "^0.8.5",
         "webdriver-manager": "^12.1.9"
     },
@@ -75,16 +78,27 @@
         "url-parse": "^1.5.10"
     },
     "devDependencies": {
+        "@babel/cli": "^7.13.16",
         "@babel/core": "^7.21.8",
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
         "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.9.0",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-object-assign": "^7.18.6",
         "@babel/plugin-transform-react-jsx": "^7.21.5",
         "@babel/plugin-transform-runtime": "^7.21.4",
         "@babel/preset-env": "^7.21.5",
         "@babel/preset-react": "^7.18.6",
+        "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+        "autoprefixer": "^9.8.0",
         "babel-jest": "^27.5.1",
+        "babel-loader": "^8.1.0",
+        "babel-plugin-add-module-exports": "^1.0.2",
+        "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+        "babel-preset-proposals": "^0.3.0",
         "browserstack-local": "^1.5.2",
+        "case-sensitive-paths-webpack-plugin": "^2.4.0",
+        "css-loader": "^3.5.3",
         "docdash": "^1.2.0",
         "dotenv-webpack": "^7.1.1",
         "enzyme": "^3.11.0",
@@ -96,9 +110,16 @@
         "jest": "^27.5.1",
         "jest-fetch-mock": "^3.0.3",
         "jsdoc": "^3.6.11",
-        "nwb": "^0.25.2",
+        "mini-css-extract-plugin": "^0.9.0",
+        "postcss-loader": "^3.0.0",
         "react": "^16.14.0",
-        "react-dom": "^16.14.0"
+        "react-dom": "^16.14.0",
+        "react-refresh": "^0.10.0",
+        "style-loader": "^1.2.1",
+        "url-loader": "^4.1.0",
+        "webpack": "^5.36.1",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
     },
     "jest": {
         "setupFilesAfterEnv": [
