PCX-5879 Upgrade nodejs version to 20

--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -7,15 +7,10 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: nodejs20
 
     steps:
     - uses: actions/checkout@v3
-
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 14
-        cache: 'npm'
         
     - name: Run Test Script
       env:
