--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -7,10 +7,15 @@ on:
 jobs:
   build:
 
-    runs-on: nodejs20
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
+
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 20
+        cache: 'npm'
         
     - name: Run Test Script
       env:
